--- a/index.html
+++ b/index.html
@@ -29,5 +29,38 @@
     </h2>
 </section>
 
+
+<section id="about" class="flex">
+    <div class="image">
+        <img src="assets/jafarymashina.jpg" width="400rem" alt="JAFARY MASHINA PICTURE">
+    </div>
+    <div class="details">
+        <h2 class="subheading">About Me</h2>
+        <p>I  like working with new tools and technologies</p>
+        <ul>
+            <li class="flex">
+                <span>Name:</span>
+                <span> Jafary Mashina</span>
+            </li>
+            <li class="flex">
+                <span>Email:</span>
+                <span> jafarymashina97@gmail.com</span>
+            </li>
+            <li class="flex">
+                <span>Phone No :</span>
+                <span> +255 786 560 504</span>
+            </li>
+            <li class="flex">
+                <span>Country:</span>
+                <span> Tanzania</span>
+            </li>
+            <li class="flex">
+                <span>City:</span>
+                <span> Dar es salaam</span>
+            </li>
+        </ul>
+    </div>
+</section>
+
 </body>
 </html>
