--- a/index.html
+++ b/index.html
@@ -62,5 +62,26 @@
     </div>
 </section>
 
+
+<section id="skills" class="flex">
+    <h2 class="subheading">Skills</h2>
+    <div class="flex innerdiv">
+        <div><img src="assets/bootstrap.png" style="width:5rem;"></div>
+        <div><img src="assets/cplusplus.png" style="width:5rem;"></div>
+        <div><img src="assets/csharp.png" style="width:5rem;"></div>
+        <div><img src="assets/css.png" style="width:5rem;"></div>
+        <div><img src="assets/html.png" style="width:5rem;"></div>
+        <div><img src="assets/photoshop.png" style="width:5rem;"></div>
+    </div>
+    <div class="flex innerdiv">
+        <div><img src="assets/illustrator.png" style="width:5rem;"></div>
+        <div><img src="assets/java.png" style="width:5rem;"></div>
+        <div><img src="assets/javascript.png" style="width:5rem;"></div>
+        <div><img src="assets/linux.png" style="width:5rem;"></div>
+        <div><img src="assets/node.png" style="width:5rem;"></div>
+        
+    </div>
+</section>
+
 </body>
 </html>
