--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
             <li class="flex">
                 <span>Email:</span>
-                <span> jafarymashina97@gmail.com</span>
+                <span>mashinajafary@gmail.com</span>
             </li>
             <li class="flex">
                 <span>Phone No :</span>
